# leitner

./: Cargo.toml  README.md  flake.nix  flashcards.json
src/: app.rs  leitner.rs  main.rs  ui.rs
tools/: poem2csv.py
